0: Cleanup - Hide body Scrollbar on modal open - Enable Work Section - Fix visual bugs with modal - Proper Loader with Gallery

--- a/src/styles/scss/project_modal_content.scss
+++ b/src/styles/scss/project_modal_content.scss
@@ -6,13 +6,11 @@
     display: flex;
     width: 100%;
     min-height: 0;
-    flex-grow: 1;
 }
 
 // Text content
 .contentContainer {
     overflow: auto;
-    height: 100%;
     padding-top: map-get($abs_spacing, 7);
 }
 
